--- a/src/components/Cart/index.css
+++ b/src/components/Cart/index.css
@@ -1,40 +1,108 @@
-.cart-container {
-  display: flex;
-  justify-content: center;
-  min-height: 75vh;
-}
-
-@media screen and (min-width: 768px) {
-  .cart-container {
-    min-height: 90vh;
-  }
-}
-
-.cart-content-container {
+.confirmation-container {
   display: flex;
   flex-direction: column;
-  width: 90%;
-  max-width: 1110px;
+  align-items: center;
+  justify-content: center;
+  width: 500px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-@media screen and (min-width: 768px) {
-  .cart-content-container {
-    width: 80%;
-    max-width: 1110px;
-  }
-}
-
-.cart-heading {
-  color: #3e4c59;
-  font-family: 'Roboto';
+.confirmation-heading {
   font-size: 24px;
-  font-weight: 700;
+  color: #3dff44;
+  margin-bottom: 10px;
+}
+.confirmation-name {
+  color: #ff8787;
+  font-weight: bold;
+  font-size: 30px;
+}
+.confirmation-address {
+  color: #000000;
+  font-weight: bold;
+  font-size: 30px;
+}
+.confirmation-payment {
+  font-size: 26px;
+  font-weight: bold;
+  color: #000000;
 }
 
-@media screen and (min-width: 768px) {
-  .cart-heading {
-    font-size: 48px;
-  }
+.checkout-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 300px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-/* Write your CSS here */
+.checkout-heading {
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.form-group {
+  width: 100%;
+  margin-bottom: 15px;
+  text-align: left;
+}
+
+.form-group label {
+  display: block;
+  font-size: 16px;
+  margin-bottom: 5px;
+}
+
+.form-input {
+  width: 100%;
+  padding: 8px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.submit-button {
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.submit-button:hover {
+  background-color: #45a049;
+}
+.remove-all-btn {
+  background-color: #ff3b3b;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.checkout-btn {
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 4px;
+  cursor: pointer;
+}
