--- a/src/components/CartItem/index.css
+++ b/src/components/CartItem/index.css
@@ -1,7 +1,7 @@
 .cart-item {
   display: flex;
   align-items: center;
-  background-color: #ffffff;
+  background-color: #fff4f6;
   padding: 16px;
   margin-bottom: 16px;
   box-shadow: 0px 4px 16px 0px #eaebed;
