--- a/src/components/CartSummary/index.css
+++ b/src/components/CartSummary/index.css
@@ -1,1 +1,9 @@
-/* Write your CSS here */
+.order-total-value {
+  color: black;
+}
+.order-total-label {
+  color: rgb(42, 42, 42);
+}
+.total-items {
+  font-weight: bold;
+}
