--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,4 +1,7 @@
 .home-container {
+  border-radius: 30px;
+  padding: 30px;
+  background-color: #ffe4f7;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -53,29 +56,23 @@
 }
 
 .home-heading {
-  color: #1e293b;
+  margin: 0px;
+  color: #fe0099;
   font-family: 'Roboto';
   font-weight: bold;
   font-size: 30px;
   line-height: 1.2;
   text-align: center;
 }
-
+.home-price {
+  margin: 0px;
+  color: #ff61a0;
+}
 @media screen and (min-width: 768px) {
   .home-heading {
     font-size: 46px;
     text-align: left;
   }
-}
-
-.home-description {
-  font-family: 'Roboto';
-  margin-top: 36px;
-  font-size: 14px;
-  line-height: 28px;
-  color: #64748b;
-  margin-bottom: 0px;
-  text-align: center;
 }
 
 @media screen and (min-width: 768px) {
@@ -106,4 +103,7 @@
     width: 150px;
     font-size: 16px;
   }
+}
+.imgg {
+  height: 70vh;
 }
