--- a/src/components/ProductCard/index.css
+++ b/src/components/ProductCard/index.css
@@ -1,4 +1,6 @@
 .product-item {
+  border-radius: 20px;
+  background-color: #ffe6f4;
   list-style-type: none;
   margin-bottom: 48px;
   width: 350px;
@@ -6,7 +8,9 @@
   flex-shrink: 1;
   margin-right: 20px;
 }
-
+.product-holder {
+  padding: 20px;
+}
 @media screen and (min-width: 768px) and (max-width: 991px) {
   .product-item {
     width: 300px;
